<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/txtVenueTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/txt_add_venue"
                android:textColor="@color/gray_999999"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgVenueName"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_baseline_storefront_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_venue_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVenueTitle" />

            <EditText
                android:id="@+id/editTxtVenueName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:hint="@string/enter_venue"
                android:inputType="textMultiLine"
                android:minHeight="40dp"
                android:paddingStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgVenueName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgVenueName"
                app:layout_constraintTop_toTopOf="@+id/imgVenueName" />

            <ImageView
                android:id="@+id/imgVenueAddress"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_outline_location_on_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_enter_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtVenueName" />

            <TextView
                android:id="@+id/txtVenueAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_address"
                android:maxLines="2"
                android:minHeight="40dp"
                android:paddingStart="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgVenueAddress"
                app:layout_constraintTop_toTopOf="@+id/imgVenueAddress" />

            <ImageView
                android:id="@+id/imgVenueType"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_outline_category_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_venue_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVenueAddress" />

            <Spinner
                android:id="@+id/spinnerVenueStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_edit_text"
                android:overlapAnchor="false"
                android:paddingLeft="4dp"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="@+id/imgVenueType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgVenueType"
                app:layout_constraintTop_toTopOf="@+id/imgVenueType" />

            <ImageView
                android:id="@+id/imgVenuePrice"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_baseline_attach_money_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_venue_price_range"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgVenueType" />

            <Spinner
                android:id="@+id/spinnerVenueLevel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_edit_text"
                android:overlapAnchor="false"
                android:paddingStart="4dp"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="@+id/imgVenuePrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgVenuePrice"
                app:layout_constraintTop_toTopOf="@+id/imgVenuePrice" />

            <ImageView
                android:id="@+id/imgVenuePhone"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_outline_local_phone_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_venue_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgVenuePrice" />

            <EditText
                android:id="@+id/editTxtVenuePhone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgVenuePhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgVenuePhone"
                app:layout_constraintTop_toTopOf="@+id/imgVenuePhone" />

            <ImageView
                android:id="@+id/imgVenueWeb"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="31dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_outline_web_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_venue_web"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgVenuePhone" />

            <EditText
                android:id="@+id/editTxtVenueWeb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_web"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="40dp"
                android:paddingStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgVenueWeb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgVenueWeb"
                app:layout_constraintTop_toTopOf="@+id/imgVenueWeb" />

            <ImageView
                android:id="@+id/imgVenueServiceTime"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_baseline_access_time_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_venue_service_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgVenueWeb" />

            <TextView
                android:id="@+id/txtVenueServiceTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_service_start"
                android:paddingStart="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/imgVenueServiceTime"
                app:layout_constraintStart_toEndOf="@+id/imgVenueServiceTime"
                app:layout_constraintTop_toTopOf="@+id/imgVenueServiceTime" />

            <TextView
                android:id="@+id/txtVenueServiceTimeClose"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_service_end"
                android:paddingStart="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/txtVenueServiceTimeStart"
                app:layout_constraintStart_toStartOf="@+id/txtVenueServiceTimeStart"
                app:layout_constraintTop_toBottomOf="@+id/txtVenueServiceTimeStart" />

            <ImageView
                android:id="@+id/imgVenuePhoto"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_outline_image_24"
                android:backgroundTint="@color/black_3f3a3a"
                android:contentDescription="@string/img_upload_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVenueServiceTimeClose" />

            <TextView
                android:id="@+id/txtVenuePhoto"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/upload_image"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgVenuePhoto"
                app:layout_constraintTop_toTopOf="@+id/imgVenuePhoto" />

            <ImageView
                android:id="@+id/imgVenuePreview"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/img_upload_image_trigger"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/txtVenuePhoto"
                app:layout_constraintEnd_toEndOf="@+id/txtVenuePhoto"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txtVenuePhoto"
                app:layout_constraintTop_toTopOf="@+id/txtVenuePhoto"
                app:layout_constraintVertical_bias="1.0"
                tools:src="@drawable/placeholder" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnCancel"
            style="@style/RatingButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:backgroundTint="@color/gray_999999"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddVenueConfirm"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAddVenueConfirm"
            style="@style/RatingButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_complete"
            android:textSize="16sp"
            app:backgroundTint="@color/primaryDarkColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>